# Market-digest

./: .gitignore  Dockerfile  README.md  articles_info.json  buildspec.yml  data_injection.py  pyproject.toml  run_scrapers.py
classes/: macro_handler.py
legacy_code/: BlackRock.py  EU_bank.py  FederalReserve.py  GoldmanSachs.py  JPMorgan.py  LombardOdier.py  Merrill.py  MorganStanley.py  SafraSarasin.py  Troweprice.py  WellsFargo.py  WisdomTree.py
scrapers/: base_scraper.py  bis.py  bis_new.py  blackrock.py  ecb.py  fed.py  goldman.py  imf.py  jpmorgan.py  llm_functions.py  lombard.py  macro_handler.py  merrill.py  morgan_stanley.py  safra_sarasin.py  troweprice.py  utils.py  wisdom_tree.py
utils/: helper_functions.py
