[tool.poetry]
name = "market-digest"
version = "0.1.0"
description = "Code for web scrapping macro reports and generated macro summaries"
authors = ["George Fatouros <george@alpha-tensor.ai>"]
license = "All Rights Reserved"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
selenium = "^4.20.0"
bs4 = "^0.0.2"
boto3 = "^1.34.100"
pandas = "^2.2.2"
unidecode = "^1.3.8"
pypdf = "^4.3.1"
llama-index = "^0.10.44"
llama-index-llms-openai = "^0.1.22"
pyvis = "^0.3.2"
colorlog = "^6.8.2"
cryptography = "^43.0.0"
langchain-experimental = "^0.3.2"
tiktoken = "^0.8.0"
pinecone = {extras = ["grpc"], version = "^5.3.1"}
pinecone-plugin-assistant = "^0.3.0"
pinecone-client = "^5.0.1"
langchain-openai = "^0.2.2"
pinecone-plugin-inference = "^1.1.0"
selenium-stealth = "^1.0.6"

[tool.poetry.group.dev.dependencies]
notebook = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
